# tdt4225-excercise-2

./: .env  .gitignore  DbConnector.py  README.md  example.py  pyproject.toml  trip_1003876.html  trip_1093727.html  trip_1199139.html  trip_147121.html  trip_1492417.html  trip_182829.html  trip_224510.html  trip_385819.html  trip_578581.html  trip_849531.html
part1/: data_cleaning.py  eda.py
part1/eda/: verify_duplicates.py  verify_polyline_bounds.py
part1/eda/path_vizualization/: csv_to_plt_format.py  quick_start.py  visualize_paths.py
part2/: data_queries.py
